fix white space at bottom, text changes

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    padding-bottom: 20px;
   }
 
 h1, h2, p {
